--- a/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
@@ -135,7 +135,7 @@
             <div class="checkoutInnersec Paymentsec">
                 @if (Model.WebsiteCartItems == null || Model.WebsiteCartItems.Count > 0)
                 {
-                    <h4 class="ordConfirmHead">Basket</h4>
+                    <h4 class="ordConfirmHead basked-heading">Basket</h4>
                 }
                 <div class="tableWrap mb-4">
                     @if (Model.WebsiteCartItems == null || Model.WebsiteCartItems.Count > 0)
