--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -74,13 +74,13 @@
 
 
     <!-- Modals for add to cart and kit product attribute selection -->
-    <div class="modal fade" id="myModal" role="dialog">
-        <div class="modal-dialog">
+    <div class="modal fade basket-modal" id="myModal" role="dialog">
+        <div class="modal-dialog modal-lg">
 
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Added to Basket</h4>
+                    <h4 class="modal-title">Add to Basket</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
 
                 </div>
