--- a/WMS/Views/Theme/Default/Shared/_Layout.cshtml
+++ b/WMS/Views/Theme/Default/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     @Styles.Render("~/Content/Themes/UI-WZ/uiwz")
     @Styles.Render("~/Content/fontawesome-bundle")
     @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/css/default")
+    @Styles.Render("~/Content/Theme/default/css")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqueryui")
