update whishlist page Imported from Changeset 2757

--- a/WarehouseEcommerce/Views/Theme/University/Products/WishList.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/WishList.cshtml
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="nb_sec">
-            <div class="nb_header_style1">
+            <div class="nb_header_style1 wishlist-main-div">
                 <h3>WishList</h3>
             </div>
             <div id="UpdateWishList">
