--- a/WarehouseEcommerce/Views/Theme/University/Shared/_wishlistItems.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_wishlistItems.cshtml
@@ -3,10 +3,11 @@
 <div class="row">
 
     <div class="nb_basket_wrap">
-        <table class="basketTable">
+        <table class="basketTable wishlist-table">
             <thead>
                 <tr>
                     <th>Product</th>
+                    <th></th>
                     <th></th>
                 </tr>
             </thead>
@@ -14,10 +15,10 @@
 
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td>
-                            <div class="prdimgsec">
-                                <span class="prdimg">
+                    <tr class="cmnRow">
+                        <td class="prd">
+                            <div class="prdCellwrap ">
+                                <span class="imgWrap">
                                     <img src="@(!string.IsNullOrEmpty(item.ProductMaster.DefaultImage)? ViewBag.BaseFilePath + item.ProductMaster.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" />
                                 </span>
                                 <span class="prdname">@(item.ProductMaster?.Name)</span>
@@ -25,15 +26,15 @@
                         </td>
                         <td>
                             <div>
-                                <a href="javascript:;" class="btn btn-success" onclick="addToCart(@item.ProductMaster.ProductId)">Add to Basket</a> <br /><br />
-                                <a href="javascript:;" class="btn btn-danger" onclick="RemoveWishItem(@item.ProductMaster.ProductId)">Remove</a>
-                                <br /><br />
                                 <div class="custom-control custom-switch">
                                     <input type="checkbox" class="custom-control-input notification-switch" id="notification-switch-@item.ProductMaster.ProductId" value="@item.ProductMaster.ProductId" @(item.IsNotification ? "checked" : "")>
-                                    <label class="custom-control-label" for="notification-switch-@item.ProductMaster.ProductId">Notification</label>
+                                    <label class="custom-control-label" for="notification-switch-@item.ProductMaster.ProductId">Stock Notification</label>
                                 </div>
                             </div>
-
+                        </td>
+                        <td class="wishlist-btn-td">
+                                <a href="javascript:;" class="wishlist-table-btns wishlist-basket-btn" onclick="addToCart(@item.ProductMaster.ProductId)">Add to Basket</a><br />
+                                <a href="javascript:;" class="wishlist-table-btns wishlist-remove-btn" onclick="RemoveWishItem(@item.ProductMaster.ProductId)">Remove</a>
                         </td>
 
                     </tr>
