--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -3140,12 +3140,13 @@ body.modal-open {
             .basketTable .cmnRow .subtotalCellInner {
                 justify-content: center !important;
             }
-        .basketTable .prdCellwrap .imgWrap,
-        .basketTable .prdCellwrap .prdName,
-        .basketTable .cmnRow .qty {
-            width: 320px !important;
-            height: auto !important;
-        }
+            .basketTable .prdCellwrap .imgWrap,
+            .basketTable .prdCellwrap .prdName,
+            .basketTable .cmnRow .qty,
+            .wishlist-table tr td .prdname {
+                width: 320px !important;
+                height: auto !important;
+            }
         .basketTable .prdCellwrap .imgWrap img {
            width: 320px !important;
            height: 320px;
@@ -3158,7 +3159,8 @@ body.modal-open {
     }
     .basketTable .prdCellwrap .imgWrap,
     .basketTable .prdCellwrap .prdName,
-    .basketTable .cmnRow .qty {
+    .basketTable .cmnRow .qty,
+    .wishlist-table tr td .prdname {
         width: 295px !important;
     }
 }
@@ -3170,7 +3172,8 @@ body.modal-open {
     }
     .basketTable .prdCellwrap .imgWrap,
     .basketTable .prdCellwrap .prdName,
-    .basketTable .cmnRow .qty {
+    .basketTable .cmnRow .qty,
+    .wishlist-table tr td .prdname {
         width: 270px !important;
     }
 }
@@ -3252,3 +3255,72 @@ body.modal-open {
 .nb_header .nb_headicolst li i {
     font-size: 20px;
 }
+
+/*wishlist-table start*/
+.wishlist-main-div {
+margin-bottom:unset;    
+}
+.wishlist-table tr td {
+    padding: 5px 0px !important;
+    vertical-align: inherit !important;
+}
+.wishlist-table .prdCellwrap {
+    flex-direction:row !important;
+}
+@media(max-width:768px){
+    .wishlist-table .prdCellwrap {
+        flex-direction: column !important;
+    }
+    .wishlist-table tr {
+    align-items:center;
+}
+        .wishlist-table tr td {
+            margin-bottom: 10px;
+        }
+        .wishlist-table tr td .prdname {
+            margin-top: 20px;
+        }
+    .wishlist-table .wishlist-btn-td {
+        align-items: center;
+        display: flex !important;
+        justify-content: center;
+        flex-direction: column;
+    }
+}
+.wishlist-table .wishlist-table-btns {
+    width: 200px;
+    height: 50px;
+    transition: all 0.3s ease;
+    font-family: "primaryfont_Bold";
+    font-size: 16px;
+    text-transform: uppercase;
+}
+.wishlist-table .wishlist-remove-btn {
+    background-color: transparent;
+    color: #707070;
+    border: solid 1px #707070;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.wishlist-table .wishlist-basket-btn {
+    background-color: #f33655;
+    color: #fff;
+    border: solid 1px #f33655;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.wishlist-table .wishlist-remove-btn:hover,
+.wishlist-table .wishlist-basket-btn:hover {
+    background-color: #000;
+    border: solid 1px #000;
+    color: #fff;
+}
+.custom-control-input:checked ~ .custom-control-label::before {
+    border-color: #f33655!important;
+    background-color: #f33655!important;
+}
+/*wishlist-table end*/
