--- a/WarehouseEcommerce/Views/Theme/University/Shared/_ProductByAttributeSelectorModal.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_ProductByAttributeSelectorModal.cshtml
@@ -4,20 +4,14 @@
 }
 <div class="modal fade" id="product-by-attribute-selector" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" data-current-step="1" aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-content nb_prd_det_rightsec">
-            <div class="modal-header">
-                <h4 class="js-title-step">Select The Product Attributes</h4>
-            </div>
-            <div style="display:none">
-                <label style="color:red" id="#errorprint"></label>
-            </div>
+        <div class="modal-content">
             <div class="modal-body product-by-attribute-selector-model-body">
             </div>
-            <div class="modal-footer footSec botomBtnsec">
+            <div class="modal-footer botomBtnsec">
                 <button type="button" class="btmbtn sho" data-dismiss="modal">
                     Close
                 </button>
-                <button type="submit" class="addTobasket" onclick="addProductByAttributeToCart()">
+                <button type="submit" class="btmbtn pro" onclick="addProductByAttributeToCart()">
                     Add To Basket
                 </button>
             </div>
