--- a/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
@@ -22,8 +22,10 @@
                                 aria-controls="collapseOne">
                             Price
                         </button>
-                        <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
                     </h5>
+                    <div>
+                        <input type="text" id="amount" readonly>
+                    </div>
                 </div>
                 <div id="collapseOne"
                      class="collapse show price-range-div"
