--- a/WarehouseEcommerce/Views/Theme/University/User/Account.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/User/Account.cshtml
@@ -72,7 +72,7 @@
                                                 </div>*@
                                             <div class="col-md-12">
                                                 <div class="form-group">
-                                                    <button onclick="UpdateUser()">Save Details</button>
+                                                    <button class="account-save-btn" onclick="UpdateUser()">Save Details</button>
                                                 </div>
                                             </div>
                                         </div>
