--- a/WarehouseEcommerce/Views/Theme/University/Products/KitProductDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/KitProductDetail.cshtml
@@ -240,7 +240,7 @@
                                                         <div class="kit-cart-item-details" style="display:none;">
 
                                                             <span class="sku-code">@productitems.KitProductMaster.SKUCode</span>
-                                                            <span class="product-quantity">@productitems.Quantity</span>
+                                                            <span class="product-quantity">@Convert.ToInt32(productitems.Quantity)</span>
                                                             <span class="product-id">@productitems.KitProductId</span>
 
                                                         </div>
