--- a/WarehouseEcommerce/Views/Theme/University/User/Account.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/User/Account.cshtml
@@ -65,11 +65,6 @@
                                                     @Html.EditorFor(model => model.AuthUser.UserEmail, new { htmlattributes = new { @class = "form-control", @placeholder = "Enter your email", @disabled = "disabled" } })
                                                 </div>
                                             </div>
-                                            @*<div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <input type="text" class="form-control" placeholder="Enter your mobile number">
-                                                    </div>
-                                                </div>*@
                                             <div class="col-md-12">
                                                 <div class="form-group">
                                                     <button class="account-save-btn" onclick="UpdateUser()">Save Details</button>
@@ -77,74 +72,6 @@
                                             </div>
                                         </div>
                                     </div>
-
-
-                                    @*<div class="subcontBox">
-                                            <h3 class="subhead">Address Information</h3>
-                                            <div class="row">
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <input type="text" class="form-control" placeholder="Address Line 1">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <input type="text" class="form-control" placeholder="Address Line 2">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <input type="text" class="form-control" placeholder="Land Mark">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <input type="text" class="form-control" placeholder="Zip code">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <select>
-                                                            <option value="0" selected="selected" disabled>City</option>
-                                                            <option value="1">value1</option>
-                                                            <option value="2">value2</option>
-                                                            <option value="3">value3</option>
-                                                        </select>
-                                                    </div>
-                                                </div>
-
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <select>
-                                                            <option value="0" selected="selected" disabled>State</option>
-                                                            <option value="1">value1</option>
-                                                            <option value="2">value2</option>
-                                                            <option value="3">value3</option>
-                                                        </select>
-                                                    </div>
-                                                </div>
-
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <select>
-                                                            <option value="0" selected="selected" disabled>Country</option>
-                                                            <option value="1">value1</option>
-                                                            <option value="2">value2</option>
-                                                            <option value="3">value3</option>
-                                                        </select>
-                                                    </div>
-                                                </div>
-
-
-                                                <div class="col-md-12">
-                                                    <div class="form-group">
-                                                        <button>Save Details</button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>*@
-
-
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
@@ -158,7 +85,7 @@
                                                 <div class="col-12 col-sm-12 col-md-2 col-lg-2">
                                                     <div class="orderDetls">
                                                         <label>ORDER DATE</label>
-                                                        <h6>@order.DateCreated.ToString("MMM dd,yyyy")</h6>
+                                                        <h6>@order.DateCreated.ToString("dd - MMM - yyyy")</h6>
                                                     </div>
                                                 </div>
                                                 <div class="col-12 col-sm-12 col-md-2 col-lg-2">
@@ -169,7 +96,7 @@
                                                 </div>
                                                 <div class="col-12 col-sm-12 col-md-3 col-lg-4">
                                                     <div class="orderDetls">
-                                                        <label>SOLD BY</label>
+                                                        @*<label>SOLD BY</label>*@
                                                         @*<div class="orderLnk">
                                                             <a href="#">brandsexpress </a> <span> (1 item)</span>
                                                         </div>*@
@@ -178,7 +105,7 @@
                                                 <div class="col-12 col-sm-12 col-md-2 col-lg-2">
                                                     <div class="orderDetls">
                                                         <label>ORDER TOTAL</label>
-                                                        <h6>@order.OrderTotal</h6>
+                                                        <h6>@ViewBag.CurrencySymbol@order.OrderTotal</h6>
                                                     </div>
                                                 </div>
                                                 <div class="col-12 col-sm-12 col-md-3 col-lg-2">
@@ -206,7 +133,7 @@
                                                             <h3>
                                                                 @orderdet.ProductMaster.Name
                                                             </h3>
-                                                            <span class="qty">Quantity : @orderdet.Qty</span>
+                                                            <span class="qty">Quantity : @Convert.ToInt32(orderdet.Qty)</span>
                                                             <ul class="orderProductStatus">
                                                                @* <li>@((Ganedata.Core.Entities.Enums.OrderStatusEnum?)orderdet.OrderDetailStatusId)</li>*@
                                                                 @*<li>This item has been dispatched</li>*@
@@ -216,7 +143,7 @@
                                                     <div class="col-12 col-sm-12 col-md-2 col-lg-4">
                                                         <div class="orderDetls itemPrc">
                                                             <label>ITEM PRICE</label>
-                                                            <h6>@orderdet.Price</h6>
+                                                            <h6>@ViewBag.CurrencySymbol@orderdet.Price</h6>
                                                         </div>
                                                     </div>
                                                 </div>
