order email confirmation added Imported from Changeset 2763

--- a/WMS/Views/Theme/Default/EmailTemplates/_EmailTemplates.cshtml
+++ b/WMS/Views/Theme/Default/EmailTemplates/_EmailTemplates.cshtml
@@ -42,6 +42,12 @@
             c.FieldName = "NotificationType";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
         });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "TenantWebsites.SiteName";
+            c.Caption = "Site Name";
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+        });
 
         settings.Columns.Add(c =>
         {
