--- a/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmOrder.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmOrder.cshtml
@@ -154,7 +154,7 @@
                                 </div>
                                 <div class="button-submit">
                                     <button type="Submit" name="submitNewsletter" class="saveAddrBtn">Proceed To Payment</button>
-                                    <a href="@Url.Action("checkout","orders",new{ step = (int)CheckoutStep.PaymentMethod})" class="saveAddrBtn">Back</a>
+                                    <a href="@Url.Action("checkout","orders",new{ step = (int)CheckoutStep.PaymentMethod})" class="saveAddrBtn mt-3">Back</a>
                                 </div>
 
 
