--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -1708,7 +1708,6 @@ body.modal-open {
                 top: 0;
                 background-color: #f33655;
                 color: #fff;
-                font-style: italic;
                 font-family: "primaryfont_Bold";
                 font-size: 20px;
                 border: none;
@@ -2125,7 +2124,7 @@ body.modal-open {
 }
 
     .basketTable tr.cmnRow td {
-        font-weight: bold !important;
+        font-weight: 600 !important;
     }
 
         .basketTable tr.cmnRow td.greyBox {
@@ -2721,7 +2720,7 @@ body.modal-open {
 
 
     .nb_header {
-        height: 200px;
+        height: 150px;
         padding: 35px 10px 18px 10px;
     }
 
@@ -2730,7 +2729,7 @@ body.modal-open {
     }
 
     .uni-pages-pt {
-        padding-top: 200px !important;
+        padding-top: 150px !important;
     }
 
     .basketTable tr td {
@@ -3093,6 +3092,9 @@ body.modal-open {
     .basketTable {
         margin-top: 10px;
     }
+    .botomBtnsec .mobile-checkout {
+        display: block!important;
+    }
 }
 @media(max-width:768px) {
     .price-b {
@@ -3327,9 +3329,6 @@ margin-bottom:unset;
 /*wishlist-table end*/
 
 /*price-range-bar in Dynamic filters - start*/
-.nb_sec {
-    min-height: 400px;
-}
 #slider-range {
     background-color: black;
     border: unset !important;
