smal bug fix Imported from Changeset 2766

--- a/WarehouseEcommerce/Views/Theme/University/Orders/PayPal.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/PayPal.cshtml
@@ -43,7 +43,7 @@
                     <h4 class="ordConfirmHead">Payments</h4>
                     <div class="orderTotalsec">
                         @*<div>Order Total</div><br/>*@
-                        <div>Order Total<span>@Model.CurrencySymbol<p class="total-amount">@Model.TotalOrderAmount</p></span></div>
+                        <div>Order Total<span><p class="total-amount">@Model.CurrencySymbol@Model.TotalOrderAmount</p></span></div>
 
                     </div>
 
