fix some UI bugs Imported from Changeset 2767

--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -3289,6 +3289,9 @@ margin-bottom:unset;
         justify-content: center;
         flex-direction: column;
     }
+    .wishlist-table .product-th {
+        display:none;
+    }
 }
 .wishlist-table .wishlist-table-btns {
     width: 200px;
