--- a/WarehouseEcommerce/Views/Theme/University/Shared/_wishlistItems.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_wishlistItems.cshtml
@@ -6,7 +6,7 @@
         <table class="basketTable wishlist-table">
             <thead>
                 <tr>
-                    <th>Product</th>
+                    <th class="product-th">Product</th>
                     <th></th>
                     <th></th>
                 </tr>
