--- a/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmOrder.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmOrder.cshtml
@@ -111,7 +111,7 @@
                     </div>
                     <div class="offset-lg-1 col-lg-3">
                         <h4 class="subHead">
-                            Item Details
+                            Product Details
                         </h4>
                         <ul class="itemList">
                             @foreach (var item in Model.CartItems)
@@ -133,7 +133,7 @@
 
                             <div class="button-submit">
                                 <button type="button" name="submitNewsletter" class="saveAddrBtn" onclick="window.location.href='@Url.Action("PayPal","orders")'">Proceed To Payment</button>
-                                <a href="@Url.Action("checkout", "orders", new {checkoutStep = CheckoutStep.PaymentMethod})" class="saveAddrBtn">Back</a>
+                                <a href="@Url.Action("checkout", "orders", new {checkoutStep = CheckoutStep.PaymentMethod})" class="saveAddrBtn mt-3">Back</a>
                                 @*<a href="@Url.Action("Index","Test")" class="btn btn-block cash-btn cashbtn" name="submitNewsletter"> Proceed To Payment</a>*@
                             </div>
 
