--- a/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmPaymentMessage.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmPaymentMessage.cshtml
@@ -37,12 +37,8 @@
                         @if (addresses != null)
                         {
 
-                                <h4 class="subHead">Order Number</h4><p>@Model.OrderNumber</p>
-                            <h4 class="subHead">Transaction Id</h4><p> @Model.SagePayPaymentResponse.transactionId</p>
-
-
-
-
+                            <h4 class="subHead">Order Number</h4><p class="content">@Model.OrderNumber</p>
+                            <h4 class="subHead">Transaction Id</h4><p class="content"> @Model.SagePayPaymentResponse.transactionId</p>
 
                             <h4 class="subHead">
                                 Billing Address
@@ -108,7 +104,7 @@
                     </div>
                     <div class="offset-lg-1 col-lg-3">
                         <h4 class="subHead">
-                            Item Details
+                            Product Details
                         </h4>
                         <ul class="itemList">
                             @foreach (var item in Model.CartItems)
