--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -3383,3 +3383,18 @@ margin-bottom:unset;
     padding-bottom: 15px;
     background-color: #f9f9f9;
 }
+
+html {
+    position: relative;
+    min-height: 100%;
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+    height: 100%;
+}
+
+.uni-pages-pt {
+    min-height: calc(100% - 472px);
+}
