--- a/WarehouseEcommerce/Views/Theme/Smart/Orders/Checkout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Orders/Checkout.cshtml
@@ -11,7 +11,7 @@
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
                         <li>></li>
                         <li class="breadcrumb-item">
-                            <a href="#">Billing and shipping</a>
+                            <a href="#">Billing & shipping</a>
                         </li>
                     </ol>
                 </nav>
