--- a/WarehouseEcommerce/Views/Theme/University/Orders/_CheckoutProcessPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_CheckoutProcessPartial.cshtml
@@ -9,7 +9,7 @@
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
                         <li>></li>
                         <li class="breadcrumb-item">
-                            <a href="#">Billing and shipping</a>
+                            <a href="#">Billing & shipping</a>
                         </li>
                     </ol>
                 </nav>
