kit product page style fix Imported from Changeset 2772

--- a/WarehouseEcommerce/Views/Theme/University/Shared/_KitProductChildsSelectorWizardModal.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_KitProductChildsSelectorWizardModal.cshtml
@@ -21,23 +21,23 @@
                         <div class="dynamic-dropdown">
 
                         </div>
-                        
+
                     </div>
                 </div>*@
 
             </div>
-           
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">
+
+            <div class="modal-footer botomBtnsec">
+                <button type="button" class="btmbtn sho" data-dismiss="modal">
                     Close
                 </button>
-                <button type="button" class="btn btn-secondary" data-step-to="prev">
+                <button type="button" class="btmbtn previous" data-step-to="prev">
                     Previous
                 </button>
-                <button type="button" class="btn btn-success" data-step-to="next">
+                <button type="button" class="btmbtn pro" data-step-to="next">
                     Next
                 </button>
-                <button type="submit" class="btn btn-info">
+                <button type="submit" class="btmbtn submit">
                     Submit
                 </button>
             </div>
