--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -1100,7 +1100,7 @@ body.modal-open {
 /*kit product page cart-item-detail start*/
 .cartitem-details {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 15px 0px;
     margin-top: -1px;
@@ -2561,16 +2561,35 @@ body.modal-open {
     text-transform: uppercase;
 }
 
+    .botomBtnsec .btmbtn.previous,
+    .botomBtnsec .btmbtn.submit,
     .botomBtnsec .btmbtn.pro {
-        background-color: #f33655;
-        color: #fff;
-        border: solid 1px #f33655;
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: center;
     }
 
+    .botomBtnsec .btmbtn.pro {
+        background-color: #f33655;
+        color: #fff;
+        border: solid 1px #f33655;
+    }
+
+    .botomBtnsec .btmbtn.previous {
+        background-color: #9e9e9e;
+        color: #fff;
+        border: solid 1px #9e9e9e;
+    }
+
+    .botomBtnsec .btmbtn.submit {
+        background-color: #8bc34a;
+        color: #fff;
+        border: solid 1px #8bc34a;
+    }
+
+        .botomBtnsec .btmbtn.previous:hover,
+        .botomBtnsec .btmbtn.submit:hover,
         .botomBtnsec .btmbtn.pro:hover {
             background-color: #000;
             border: solid 1px #000;
