--- a/WarehouseEcommerce/Views/Theme/University/Products/KitProductDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/KitProductDetail.cshtml
@@ -25,20 +25,20 @@
                                 <li>></li>
                                 @if (!string.IsNullOrEmpty(Model?.TenantDepartment?.DepartmentName))
                                 {
-                                    <li class="breadcrumb-item"><a href="@Url.Action("list", "Products", new { department = @Model.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(Model?.TenantDepartment?.DepartmentName) ? Model.TenantDepartment.DepartmentName : "")</a></li>
+                                    <li class="breadcrumb-item"><a href="@Url.Action("list", "Products", new { department = @Model.TenantDepartment.DepartmentName })">@(!string.IsNullOrEmpty(Model?.TenantDepartment?.DepartmentName) ? Model.TenantDepartment.DepartmentName : "")</a></li>
                                     <li>></li>
                                 }
                                 @if (Url.Action() != Url.Action("list", "Products", new { department = Model.TenantDepartment?.DepartmentName }))
                                 {
                                     if (!string.IsNullOrEmpty(Model?.ProductGroup?.ProductGroup))
                                     {
-                                        <li class="breadcrumb-item"><a href="@Url.Action("list", "Products", new { group = Model.ProductGroup?.ProductGroup, department = Model.TenantDepartment?.DepartmentName})">@(!string.IsNullOrEmpty(Model?.ProductGroup?.ProductGroup) ? Model.ProductGroup?.ProductGroup : "")</a></li>
+                                        <li class="breadcrumb-item"><a href="@Url.Action("list", "Products", new { group = Model.ProductGroup?.ProductGroup, department = Model.TenantDepartment?.DepartmentName })">@(!string.IsNullOrEmpty(Model?.ProductGroup?.ProductGroup) ? Model.ProductGroup?.ProductGroup : "")</a></li>
                                         <li>></li>
                                     }
                                 }
                                 @if (!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName))
                                 {
-                                    <li class="breadcrumb-item"><a href="@Url.Action("list", "Products", new { group = Model.ProductGroup?.ProductGroup, department = Model.TenantDepartment?.DepartmentName,values ="TypeS-"+Model.ProductCategory.ProductCategoryName })">@(!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName) ? Model.ProductCategory.ProductCategoryName : "")</a></li>
+                                    <li class="breadcrumb-item"><a href="@Url.Action("list", "Products", new { group = Model.ProductGroup?.ProductGroup, department = Model.TenantDepartment?.DepartmentName, values = "TypeS-" + Model.ProductCategory.ProductCategoryName })">@(!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName) ? Model.ProductCategory.ProductCategoryName : "")</a></li>
                                     <li>></li>
                                 }
 
@@ -56,8 +56,8 @@
                         <div class="sticky description-row col-lg-6 col-md-6">
                             <ul class="thumbnails">
                                 <li>
-                                    <a class="thumbnail" href="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" title="#">
-                                        <img data-zoom-image="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" src="@(!string.IsNullOrEmpty(Model.DefaultImage)?ViewBag.BaseFilePath + Model.DefaultImage:ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" id="zoom_03" class="img-responsive center-block" alt="image">
+                                    <a class="thumbnail" href="@(!string.IsNullOrEmpty(Model.DefaultImage) ? ViewBag.BaseFilePath + Model.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" title="#">
+                                        <img data-zoom-image="@(!string.IsNullOrEmpty(Model.DefaultImage) ? ViewBag.BaseFilePath + Model.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" src="@(!string.IsNullOrEmpty(Model.DefaultImage) ? ViewBag.BaseFilePath + Model.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" id="zoom_03" class="img-responsive center-block" alt="image">
                                         @*<img src="~/Content/Theme/Smart/app/img/product/Canon-EOS-1300D-DSLR-Camera-Body-with-Single-Lens-1.jpg" id="zoom_03" class="img-responsive center-block" alt="image">*@
                                     </a>
                                 </li>
@@ -152,8 +152,8 @@
                                                     {
                                                         <li> <a target='_new' href="@(ViewBag.BaseFilePath+item.FilePath.ToString())"><img style='width:100%' src="@(ViewBag.BaseFilePath+item.FilePath.ToString())" /></a></li> <br />
                                                     }*@
-                                                if (Videos.Contains(extension))
-                                                {
+                                            if (Videos.Contains(extension))
+                                            {
                                                     <li>
                                                         <table>
                                                             <tr>
@@ -164,9 +164,9 @@
                                                         </table>
                                                     </li>
                                                     <br />
-                                                }
-                                                else if (Files.Contains(extension))
-                                                {
+                                            }
+                                            else if (Files.Contains(extension))
+                                            {
                                                     <li>
                                                         <a href="@(ViewBag.BaseFilePath + item.FilePath)" download><b>@Path.GetFileName(item.FilePath).ToUpper()</b></a>
                                                     </li>
@@ -189,35 +189,39 @@
                                 </li>
 
                             </ul><!-- Tab panes -->
-                            <div class="tab-content kit-tabs-content responsive">
+                            <div class="tab-content kit-tabs-content responsive nb_prd_det_rightsec">
                                 <div class="tab-pane active" id="home" role="tabpanel">
                                     <div class="cartitem-details">
-                                        <div class="cartitem-imgtext ">
+                                        <div class="col-md-12"><h2 class="head">@Model.Name</h2></div>
+                                        <div class="cartitem-imgtext col-md-12">
                                             <div class="cartitem-text">
-                                                <p><a href=""><strong>@Model.Name</strong></a></p>
-                                                <p><b>SKU Code:</b> <span>@Model.SKUCode</span></p>
-
-                                                @*<p>
-                                                        <div class=" required ">
-                                                            <label class="control-label" for="input-option226">Select Available Option</label>
-                                                            <select name="option[226]" id="input-option226" class="form-control">
-                                                                <option value=""> --- Please Select --- </option>
-                                                                <option value="black">
-                                                                    Black
-                                                                </option>
-                                                            </select>
-                                                        </div>
-                                                    </p>*@
-                                                <p class="cart-quantity">
-                                                    <b>Quantity:</b> <input type="number" min="0" placeholder="Qty" onchange="" value="1" />
-                                                    @*<a href="javascript:;" class="remove-btn cart-del" onclick=""><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</a>*@
-                                                </p>
-                                                <p class="cart-quantity"><b>In this kit following products are include:</b></p>
-                                                @{
-                                                    var products = Model.ProductKitItems.Where(u => u.ProductKitType == Ganedata.Core.Entities.Enums.ProductKitTypeEnum.Kit && u.IsDeleted != true && u.IsActive != false).ToList();
-                                                    int i = 0;
+                                                <span class="prd_amnt">@ViewBag.CurrencySymbol@Model.SellPrice</span>
+                                            </div>
+                                        </div>
+                                        <div class="nb_prd_det_rightsec">
+                                            <div class="footSec">
+                                                @if (@Model.SellPrice > 0 && @Model.SellPrice.HasValue && @Model.PercentMargin > 0 && Model.InventoryStocks.Sum(a => a.Available) > 0)
+                                                {
+                                                    <div class="qty pull-left">
+                                                        <span>quantity</span>
+                                                        @Html.DropDownList("product-quantity", Enumerable.Range(1, (int)Model.InventoryStocks.Sum(a => a.Available)).Select(a => new SelectListItem { Text = a.ToString(), Value = a.ToString() }), htmlAttributes: new { @class = "form-control" })
+                                                    </div>
+                                                    <div class="col-md-6 pull-right">
+                                                        <button type="Submit" style="height: 45px" name="submitNewsletter" class="addTobasket add-kit-product" id="button-cart">Add to Basket</button>
+                                                    </div>
                                                 }
-                                                @foreach (var productitems in products)
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="cartitem-imgtext ">
+                                        <div class="cartitem-text">
+                                            <p class="cart-quantity"><b>In this kit following products are include:</b></p>
+                                            @{
+                                                var products = Model.ProductKitItems.Where(u => u.ProductKitType == Ganedata.Core.Entities.Enums.ProductKitTypeEnum.Kit && u.IsDeleted != true && u.IsActive != false).ToList();
+                                                int i = 0;
+
+                                                foreach (var productitems in products)
                                                 {
                                                     if (i == 0)
                                                     {
@@ -249,22 +253,8 @@
 
 
                                                 }
+                                            }
 
-                                            </div>
-                                        </div>
-                                        <div class="cartitem-price">
-                                            <p><span>Price:</span><b>@ViewBag.CurrencySymbol@Model.SellPrice</b></p>
-                                            <div class="button-submit">
-                                                @if (Model.SellPrice > 0 && Model.SellPrice.HasValue && Model.PercentMargin > 0)
-                                                {
-                                                    <button type="Submit" name="submitNewsletter" class="btn btn-block move-to-cart-btn add-kit-product" id="button-cart">Add to Basket</button>
-                                                }
-                                                else
-                                                {
-                                                    <button type="button" class=" btn btn-block disabled-btn add-kit-product">Add to Basket</button>
-                                                }
-
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
